# ATS2.0

./: AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env  .env.example  Cargo.toml  Dockerfile  README_API.md  oldfiles_20250603165439_create_applications_table.sql  package-lock.json  package.json
backend/frontend/: package-lock.json
backend/migrations/: 20250603160000_enable_uuid.sql  20250603161000_create_users_table.sql  20250603162000_create_jobs_table.sql  20250603162500_create_application_stage_enum.sql  20250603163000_create_applications_table.sql
backend/src/: auth.rs  auth_middleware.rs  config.rs  db.rs  error.rs  main.rs
backend/src/models/: application.rs  job.rs  user.rs
backend/src/routes/: applications.rs  health.rs  jobs.rs  mod.rs  users.rs
backend/tests/: api.rs
docs/: compliance.md  deployment.md  ops.md  vision.md
frontend/: .env.example  .env.local  Dockerfile  README.md  package-lock.json  package.json  tsconfig.tailwind.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  index.ts  jobs.ts
frontend/src/components/: ErrorBoundary.tsx  Toast.tsx
frontend/src/pages/: CandidatePortal.tsx  Dashboard.tsx  HealthCheck.tsx  JobForm.tsx  JobList.tsx  JobsCRUD.tsx  Login.tsx  Signup.tsx
tests/: api.rs
